# mcp-eval

./: .gitignore  GUIDE.md  Makefile  README.md  convert_optional_to_union.py  mcpeval.config.schema.json  pyproject.toml
docs/: agent-evaluation.mdx  agents.mdx  api-catalog.mdx  api-config.mdx  api-core.mdx  api-session.mdx  assertions.mdx  best-practices.mdx  building-with-claude.mdx  category.json  ci-cd.mdx  cli-reference.mdx  common-workflows.mdx  concepts.mdx  configuration.mdx  connect-servers.mdx  datasets.mdx  detailed_guide.mdx  docs.json  examples.mdx  faq.mdx  index.mdx  integrations.mdx  metrics-tracing.mdx  overview.mdx  pytest.mdx  quickstart.mdx  security.mdx  server-evaluation.mdx  test-generation.mdx  troubleshooting.mdx
examples/: agent_definition_examples.py
examples/mcp_server_fetch/: README.md  agent_definition_examples.py  mcpeval.yaml  pyproject.toml
examples/mcp_server_fetch/datasets/: advanced_fetch_dataset.py
examples/mcp_server_fetch/tests/: test_advanced_features.py  test_assertions_style.py  test_dataset_style.py  test_decorator_style.py  test_multi_criteria_judge.py  test_pytest_style.py  test_simple_decorator.py
sample/: README.md  assertion_example.py  dataset_example.py  dataset_example_2.py  decorator_example.py  mcpeval.config.yaml  mcpeval.config.yaml.example  mcpeval.yaml  pytest_example.py  sample_server.eval.py  sample_server.py  usage_example.py
scripts/: gen_schema.py  generate_badges.py  mcpeval.py  promptify.py
tests/: conftest.py  test_catalog.py  test_catalog_full.py  test_cli.py  test_cli_list_command.py  test_cli_utils.py  test_config.py  test_config_full.py  test_core.py  test_core_full.py  test_datasets.py  test_datasets_full.py  test_evaluators_basic.py  test_evaluators_judge.py  test_metrics.py  test_pytest_plugin.py  test_report_models.py  (+5 more)
(+125 files in other folders)
