[project]
name = "mcp-eval"
version = "0.1.0"
description = "Pytest-style framework for evaluating Model Context Protocol (MCP) servers."
readme = "README.md"
authors = [
    { name = "Sarmad Qadri", email = "sarmad@lastmileai.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "mcp-agent>=0.1.3",
    "opentelemetry-sdk>=1.34.1",
    "rich>=13.9.4",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "ruff>=0.8.4",
    "tomli>=2.2.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "trio>=0.30.0",
    "pytest-cov>=6.1.1",
    "httpx>=0.28.1",
]

[project.scripts]
mcp-eval = "mcp_eval.runner.__main__:app"
mcp_eval = "mcp_eval.runner.__main__:app"
mcpeval = "mcp_eval.runner.__main__:app"
gen-mcp-evals = "mcp_eval.gen_tests.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
